<?xml version="1.0"?>
<package format="2">
  <name>flipper_control</name>
  <version>0.0.1</version>
  <description>Upper-layer flipper control package for four-flipper command management and preset handling.</description>

  <maintainer email="dianhua@todo.todo">dianhua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
