<?xml version="1.0"?>
<package format="2">
  <name>mobility_control</name>
  <version>0.0.1</version>
  <description>Mobility control package for chassis command safety, tracked-base simulation bridges, and odometry adapters.</description>

  <maintainer email="dianhua@todo.todo">dianhua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>

  <export/>
</package>
