<?xml version="1.0"?>
<package format="2">
  <name>thermal_camera</name>
  <version>1.0.0</version>
  <description>ROS driver for Xtherm T2S+ thermal camera using IRPyThermal</description>
  <maintainer email="dev@todo.todo">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
