<?xml version="1.0"?>
<package format="2">
  <name>yiyou_canopen</name>
  <version>0.1.0</version>
  <description>CANopen config for Yiyou EuServo 6-axis</description>
  <maintainer email="you@email.com">your_name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>controller_manager</exec_depend>
</package>
